TEST_PROGRAMS/VALID/05/multi-multi-line_comments.go
/* Multiple multi-line comments. */

package main

var x int

/* Another multi-line comment. */

func main() {
	// Do nothing
}
