TEST_PROGRAMS/INVALID/02/comments1.go
package main

func main(){
    /*
        /*nested comments not allowed */
    */
}


